# gre-project

./: .gitignore  README.md  gre-project.cabal  stack.yaml
reflex/: reflex-starter.cabal  stack.yaml
reflex/app/: Main.hs
shared/: gre-project.cabal  stack.yaml
shared/src/: Card.hs  CardEffect.hs  Deck.hs  GameResult.hs  GameState.hs  Hand.hs  Lib.hs  Main.hs  Player.hs  Strategy.hs  Timer.hs  UserInput.hs
shared/test/: GameStateSpec.hs  LibSpec.hs
src/: Main.hs
ui/: stack.yaml  ui.cabal
ui/src/: Home.hs  Main.hs
