name:                gre-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gre-project#readme
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , GameResult
                     , Player
                     , Deck
                     , Hand
                     , Card
                     , CardEffect
                     , GameState
                     , UserInput
                     , Timer
                     , Strategy
--  other-modules:       Module
  build-depends:       base >= 4 && < 5
                     , mtl
                     , lens
                     , random-shuffle
                     , MonadRandom
                     , monad-loops
                     , derive-het
                     , operational
  ghc-options:         -Wall
  default-language:    Haskell2010

executable gre-project
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , lens
                     , random-shuffle
                     , MonadRandom
                     , monad-loops
                     , derive-het

test-suite spec
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall
  hs-source-dirs:
    test
  other-modules:
    LibSpec
    GameStateSpec
  main-is:
    Spec.hs
  build-depends:
      base >= 4.7 && <5
    , gre-project
    , lens
    , hspec == 2.*
    , QuickCheck
    , generic-random
