name:                ui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ui#readme
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable ui
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , blaze-bootstrap >=0.1
                     , blaze-html >=0.7
                     , reflex
                     , reflex-dom
                     , gre-project
